<resources>
    <string name="app_name">ADVANCED FOLDER SECURITY</string>

    <!-- Strings related to sign up -->

    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_securityans">Answer</string>
    <string name="prompt_highsecuritypin">High Security Pin</string>
    <string name="prompt_rehighsecuritypin">Reenter High Security Pin</string>
    <string name="prompt_password">Password </string>
    <string name="prompt_reenterpassword">ReEnter Password </string>
    <string name="action_sign_up">Sign Up</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_unmatch_password">This passwords do not match</string>
    <string name="error_invalid_username">Enter username</string>
    <string name="error_incorrect_password">This password is too short</string>
    <string name="action_login">Login</string>
    <string name="error_invalid_pass">This password is invalid</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_start">StartActivity</string>


    <!---STRINGS RELATED TO NAVIGATION DRAWER-->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>


    <!-- Navigation Drawer menu labels -->

    <string name="nav_home">Home</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>


    <!-- Toolbar titles when navigation menu item is selected -->

    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Candidate Profile</item>
        <item>Professional Details</item>
        <item>Company Review</item>
        <item>About Us</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string-array name="company_nav_item_titles">
        <item>Home</item>
        <item>Candidate Search</item>
        <item>Placement Search</item>
        <item>Feedback</item>
        <item>About Us</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


</resources>
