<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/login"
            android:title="Candidate Search" />

        <item
            android:id="@+id/nav_place_search"
            android:icon="@drawable/ic_suggestion"
            android:title="Placement Search" />


        <item
            android:id="@+id/Feedback"
            android:icon="@drawable/ic_fingerprint_black_24dp"
            android:title="FeedBack" />

        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_perm_identity_black_24dp"
            android:title="About Us"/>

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_active_black_24dp"
            android:title="@string/nav_notifications" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="Other">
        <menu>

            <item
                android:id="@+id/nav_privacy_policy"
                android:icon="@drawable/ic_gavel_black_24dp"
                android:title="@string/privacy_policy" />

        </menu>
    </item>

</menu>