<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="info.devloper.Placement.activity.SignupActivity2">

    <!-- Signup progress -->
    <ProgressBar
        android:id="@+id/sign_up_progress2"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/sign_up_form2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/sign_up2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_weight="300" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.github.florent37.materialtextfield.MaterialTextField
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    app:mtf_image="@drawable/ic_record_voice_over_white_24dp">

                    <EditText
                    android:id="@+id/answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_securityans"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true" />

                </com.github.florent37.materialtextfield.MaterialTextField>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.github.florent37.materialtextfield.MaterialTextField
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    app:mtf_image="@drawable/ic_fiber_pin_white_24dp">

                    <EditText
                    android:id="@+id/highsecuritypin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_highsecuritypin"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

                </com.github.florent37.materialtextfield.MaterialTextField>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.github.florent37.materialtextfield.MaterialTextField
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    app:mtf_image="@drawable/ic_fiber_pin_white_24dp">

                    <EditText
                    android:id="@+id/rehighsecuritypin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_rehighsecuritypin"

                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

                </com.github.florent37.materialtextfield.MaterialTextField>

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/sign_up_button2"
                style="?android:textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_up"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
